# estudos_analises

./: .gitignore  Makefile  README.md  pricing_heineken.html  pyproject.toml
01_pricing_heineken/: README.md
01_pricing_heineken/__marimo__/session/: pricing_heineken.py.json
01_pricing_heineken/analise_heineken/: __init__.py  dataset.py
01_pricing_heineken/analise_heineken/modeling/: predict.py
01_pricing_heineken/data/raw/: pdv_heineken_30dias.csv
01_pricing_heineken/notebooks/: pricing_heineken.py
01_pricing_heineken/reports/: dossie_executivo.md
analise_heineken/: features.py  plots.py
analise_heineken/modeling/: train.py
blog/: _quarto.yml  about.qmd
blog/posts/01-pricing-heineken/: index.qmd
blog/posts/post-with-code/: index.qmd
blog/posts/welcome/: index.qmd
docs/: about.html  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
docs/posts/01-pricing-heineken/: index.html
docs/posts/post-with-code/: index.html
docs/posts/welcome/: index.html
docs/site_libs/bootstrap/: bootstrap-b60b7f6c97b7269f2201949570269bb1.min.css
notebooks/__marimo__/session/: pricing_heineken.py.json
